# sutra-memory

./: .dockerignore  .env.example  .gitignore  ACHIEVEMENT_SUMMARY.md  AI_TRANSFORMATION_COMPLETE.md  AI_USAGE_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_AND_DEPLOY.md  BUILD_SYSTEM_UPDATE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEAN_PROJECT_VERIFICATION.md  COMPLETION_REPORT.md  CONSOLIDATION_COMPLETE.md  CONTROL_CENTER_EXCELLENCE.md  CORE_CHANGES_IMPACT_ANALYSIS.md  Cargo.toml  DEEP_CODE_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MODES.md  DESKTOP_EDITION_IMPLEMENTATION.md  DESKTOP_TECHNICAL_DEBT_ELIMINATION.md  DOCKER_DEPLOYMENT_STATUS.md  DOCKER_WEB_GUI.md  DOCS_INDEX.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_UPDATED.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATE_2025-10-25.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENHANCED_SYSTEM_GUIDE.md  EXCELLENCE_ACHIEVED.md  EXCELLENCE_COMPLETION_PLAN.md  FAST_DEVELOPMENT.md  (+112 more)
.archive/old-structure/: Dockerfile  api_service.py  hybrid_llm_replacement.py  monorepo_structure_plan.md  sutra_ai.py  test_new_structure.py  validate_reorganization.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-security.yml  release.yml
.sutra/compose/: desktop.yml  production.yml  production.yml.external
archive/: README.md  README_old.md  WARP_old.md  biological_intelligence_system.py  build-images.sh  deploy-docker-grid.sh  deploy-optimized.sh  docker-compose-v2.yml  docker-compose.yml  learning_visualizer.py  test_10000x_emergence.py  test_english_learning.py  test_validation_system.py  watch_learning.py
base-images/: python.Dockerfile  rust-runtime.Dockerfile
data/: README.md
desktop/: BUILD_PACKAGE_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DESKTOP_EDITION.md  DESKTOP_EDITION_QUICKSTART.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  build-desktop-edition.sh  validate-desktop.sh
desktop/embedding-service/: Dockerfile  app.py
desktop/scripts/: build-macos.sh  docker-start.sh
desktop/src/: app.rs  config.rs  docker_client.rs  error.rs  local_embedding.rs  local_nlg.rs  main.rs  theme.rs  types.rs
desktop/src/ui/: analytics.rs  causal_view.rs  chat.rs  export_import.rs  graph_view.rs  home.rs  knowledge.rs  mod.rs  onboarding.rs  query_builder.rs  quick_learn.rs  reasoning_paths.rs  settings.rs  sidebar.rs  status_bar.rs  temporal_view.rs  undo_redo.rs
desktop/web-client/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
desktop/web-client/src/: App.tsx  index.css
desktop/web-client/src/api/: client.ts
desktop/web-client/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
desktop/web-client/src/pages/: AnalyticsPage.tsx  ChatPage.tsx  KnowledgePage.tsx  SettingsPage.tsx
desktop/web-client/src/store/: index.ts
docker/: Dockerfile.webgui  haproxy.cfg
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLOUD_NATIVE_ALPINE_OPTIMIZATIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFRASTRUCTURE_V2.md  DOCUMENTATION_INDEX.md  EDITIONS.md  EDITION_COMPLETE_FINAL.md  EDITION_IMPLEMENTATION_SUMMARY.md  EDITION_SYSTEM_COMPLETE.md  EMBEDDING_ARCHITECTURE.md  ENTITY_EXTRACTION_SERVICE.md  INDEX.md  MIGRATION_GUIDE.md  MULTI_TENANCY_ARCHITECTURE.md  PRICING.md  PRODUCTION_ENHANCEMENTS.md  PRODUCTION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_EDITIONS.md  QUICK_REFERENCE.md  README.md  STORAGE_SERVER_QUICKSTART.md  STREAMING.md  SYSTEM_OVERVIEW.md  configuration.md  infinite-knowledge-training-paradigm.md  installation.md  quickstart.md  roadmap.md  testing.md
docs/api/: API_INTEGRATION_COMPLETE.md  EDITION_API.md  endpoints.md
docs/architecture/: ALGORITHMS.md  ARCHITECTURE.md  CLEAN_ARCHITECTURE_ANALYSIS.md  CLEAN_ARCHITECTURE_IMPLEMENTATION.md  CONFIGURATION_CENTRALIZATION.md  DEEP_DIVE.md  DESIGN.md  DOCUMENTATION_UPDATE_V3.0.1.md  GRID_SCALING_SUMMARY.md  INFRASTRUCTURE_UPDATE_V3.0.1.md  NO_SQL_POLICY.md  README.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_ANALYSIS.md  WARP.md  associations.md  memory.md  multi-tenancy.md  overview.md  persistence.md  retrieval.md  runtime.md
docs/dependency-management/: ARCHITECTURE.md  DESIGN.md  README.md  (+2 more)
e2e/: global-setup.ts  global-teardown.ts  page-objects.ts  test-utils.ts
examples/: bulk_financial_ingester.py  demo_integration.py  financial_ingester.py  query_financial_data.py  streaming_client.js  streaming_client.py  test_financial_retrieval.py  test_live_queries.py
models/: README.md
scripts/: continuous_learning_benchmark.py  debug_associations.py  debug_financial_ingestion.py  generate-license.py  generate-secrets.sh  ingest_wikipedia_production.py  integration-test.sh  minimal_production_test.py  optimize_for_stress_test.sh  optimized_6month_stress_test.py  optimized_stress_test.py  production_monitor.py  production_scale_financial.py  quick_batch_test.py  run-continuous-learning-tests.sh  run_entity_service.py  run_wikipedia_full_dataset.sh  setup-dev.sh  setup-google-finance.sh  stress_test_6month_financial.py  test_answer_quality.py  test_batch_learning.py  test_embeddings.py  test_integrated_system.py  test_parallel_associations.py  validate_6month_dataset.py  validate_financial_persistence.py  wikipedia_full_dataset.py  wikipedia_performance_suite.py
security/: README.md  SECURITY_ASSESSMENT_REPORT.md  blue_team_defenses.py  docker-compose.redblue.yml  execute_redblue_testing.sh  red_blue_team_architecture.md  red_team_attacks.py
src/: __init__.py  audit_pbss.py  biological_trainer.py  cli.py  config.py  persistence_pbss.py  pure_binary_storage.py  swarm_agents.py  swarm_agents_fixed.py  teacher_evaluator.py  workspace_manager.py
tests/: __init__.py  production_e2e_financial.py  test_biological_trainer.py  test_config_centralization.py  test_persistence.py
web_templates/: base_md3.html  dashboard.html  dashboard_md3.html  health_md3.html  intelligence_md3.html  knowledge_md3.html  md3_components.html  settings_md3.html
(+268 files in other folders)
