[workspace]
resolver = "2"
members = [
    "packages/sutra-storage",
    "packages/sutra-protocol", 
    "packages/sutra-grid-master",
    "packages/sutra-grid-agent",
    "packages/sutra-grid-events",
    "packages/sutra-bulk-ingester"
]

# Shared dependencies for consistency across workspace
[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace-level profiles
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true