[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-models"
version = "1.0.0"
description = "Sutra AI - Graph-based explainable AI system monorepo"
readme = "README.md"
authors = [
    {name = "Sutra AI Team", email = "team@sutra-ai.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    # Workspace dependencies - packages depend on each other
    "sutra-core",
]

[project.optional-dependencies]
# Development dependencies for entire workspace
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0", 
    "black==24.8.0",
    "isort==5.13.2",
    "flake8==7.3.0",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]

# Optional packages
hybrid = ["sutra-hybrid"]
api = ["sutra-api"]
cli = ["sutra-cli"]

# All packages
all = ["sutra-hybrid", "sutra-api", "sutra-cli"]

[project.urls]
Homepage = "https://github.com/sutra-ai/sutra-models"
Repository = "https://github.com/sutra-ai/sutra-models"
Documentation = "https://sutra-ai.github.io/sutra-models"
Issues = "https://github.com/sutra-ai/sutra-models/issues"

[tool.setuptools.packages.find]
where = ["packages"]

# Workspace configuration
[tool.workspace]
packages = [
    "packages/sutra-core",
    "packages/sutra-hybrid",  
    "packages/sutra-api",
    "packages/sutra-cli"
]

# Global tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov-report=term-missing"

# Coverage configuration
[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/test_*", 
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*/tests/*",
    "*/examples/*"
]
