[package]
name = "sutra-desktop"
version = "3.3.0"
edition = "2021"
authors = ["Sutra AI Team"]
description = "Sutra AI Desktop - Native GUI for the knowledge reasoning engine"
license = "MIT"
readme = "README.md"

[features]
default = ["native"]
native = ["eframe/default", "eframe/persistence"]

[dependencies]
# ============================================================================
# REUSE EXISTING WORKSPACE CRATES - NO DUPLICATION
# ============================================================================

# Core storage engine (the ONLY storage implementation)
sutra-storage = { path = "../packages/sutra-storage" }

# ============================================================================
# GUI Framework
# ============================================================================
eframe = { version = "0.29", features = ["persistence", "wgpu"] }
egui = { version = "0.29", features = ["serde"] }
egui_extras = { version = "0.29", features = ["image"] }

# ============================================================================
# Async runtime (reuse workspace version)
# ============================================================================
tokio = { workspace = true }

# ============================================================================
# Serialization (reuse workspace version)
# ============================================================================
serde = { workspace = true }
serde_json = "1.0"

# ============================================================================
# Logging (reuse workspace version)
# ============================================================================
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ============================================================================
# Utilities
# ============================================================================
directories = "5.0"  # Platform-specific data directories
dirs = "5.0"         # Home directory expansion
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }
md5 = "0.7"  # For concept ID generation

# ============================================================================
# NEW: Graph visualization and analytics
# ============================================================================
rand = "0.8"               # Force-directed layout randomization
csv = "1.3"                # CSV export/import
quick-xml = "0.36"         # GraphML export
webbrowser = "1.0"         # Open URLs in default browser

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[[bin]]
name = "sutra-desktop"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
